--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %}
 {% block page_content %}
+    <h1>Login</h1>
     <form method="POST">
         <!-- {{ form.hidden_tag() }}
                 {{ form.email.label }} {{ form.email() }}
                 {{ form.password.label }} {{ form.password() }}
                 {{ form.remember_me() }} {{ form.remember_me.label }} 
                 {{ form.submit() }} -->
-        
-        {% import "bootstrap/wtf.html" as wtf %}
-        {{ wtf.quick_form(form) }}
+
     </form>
+    {% import "bootstrap/wtf.html" as wtf %}
+    {{ wtf.quick_form(form) }}
+    <p>
+        Didn't Register Yet ?
+        <a href="{{ url_for('auth.register') }}">
+            Register
+        </a>
+    </p>
 {% endblock %}
