--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,11 @@
 {% extends "bootstrap/base.html" %}
 {% block title %}CoviDesk{% endblock %}
+
+{% block styles %}
+{{super()}}
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='datatables.css')}}">
+{% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -34,8 +40,16 @@
 </div>
 {% endfor %}
 
+
+
 {% block content %}
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='jquery.js') }}"></script>
+    <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='datatables.js') }}"></script>
+    {% block tablescript %}{% endblock %}
 {% endblock %}
