--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,9 @@
     <h4>Logged in as {{ name }}</h4>
     <h1>Available Beds</h1>
     {% if current_user.is_authenticated %}
-    <button class="btn-success">Register Beds</button>
-    {% import "bootstrap/wtf.html" as wtf %}
-    {{ wtf.quick_form(form) }}
+        <a href="{{url_for('main.bedregister')}}">
+            <button class="btn-success">Register Beds</button>
+        </a><br>
     {% endif %}
     <table id="data" class="table table-striped">
         <thead>
@@ -13,6 +13,9 @@
             <th>Number</th>
             <th>Hospital</th>
             <th>Room Number</th>
+            <th>Oxygen</th>
+            <th>Ventilator</th>
+            <th>ICU Bed</th>
             <th>Provided By</th>
             <!-- <th>Phone Number</th> -->
             <!-- <th>Email</th> -->
@@ -24,15 +27,16 @@
               <td>{{ bed.number }}</td>
               <td>{{ bed.hospital }}</td>
               <td>{{ bed.room_no }}</td>
+              <td>{{ "YES" if bed.with_oxygen else "NO"}}</td>
+              <td>{{ "YES" if bed.with_ventilators else "NO"}}</td>
+              <td>{{ "YES" if bed.is_icu else "NO"}}</td>
               <td>{{ bed.ngo.name }}</td>
-              <!-- <td>{{ bed.phone }}</td> -->
-              <!-- <td>{{ bed.email }}</td> -->
             </tr>
           {% endfor %}
         </tbody>
       </table>
-
 {% endblock %}
+
 {%block tablescript%}
 <script>
     $(document).ready(function () {
